limitador-server/kubernetes/centos-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos
  labels:
    app: centos
spec:
  containers:
  - image: centos
    command:
      - "sleep"
      - "604800"
    imagePullPolicy: IfNotPresent
    name: centos
  restartPolicy: Always
