limitador-server/kubernetes/kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  type: LoadBalancer
  ports:
    - name: envoy-http
      port: 80
      targetPort: envoy-http
  selector:
    app: kuard
